Finished basic backend

--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,6 +1,6 @@
 <h1>Make a new booking:</h1>
 
-<%= simple_form_for(@bookings) do |f| %>
+<%= simple_form_for(@booking) do |f| %>
   <%= f.input :date %>
   <%= f.submit %>
 <% end %>
