--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,2 +1,51 @@
 // Import page-specific CSS files here.
 @import "home";
+// Navbar design
+.navbar-lewagon {
+  justify-content: space-between;
+  background-color: transparent;
+  padding: 0px;
+}
+
+.navbar-lewagon .navbar-collapse {
+  flex-grow: 0;
+}
+
+.navbar-lewagon .navbar-brand img {
+  width: 64px;
+  border-radius: 50%;
+}
+
+//page design
+body {
+  background-color: #FF9F45;
+  font-family: 'Montserrat';
+  margin: 0;
+}
+
+div {
+  display: block;
+}
+
+.cards-container .cards {
+  flex-grow: 1;
+  padding: 16px;
+}
+
+@media (max-width: 768px) {
+.cards {
+    grid-template-columns: 1fr;
+}
+}
+
+@media (max-width: 992px) {
+.cards {
+    grid-template-columns: 1fr 1fr;
+}
+}
+
+.cards {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 16px;
+}
