--- a/app/views/capybaras/index.html.erb
+++ b/app/views/capybaras/index.html.erb
@@ -1,8 +1,46 @@
+<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">
+      <img src="<%= image_path "capy-logo.png"%>" />
+</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto">
+          <li class="nav-item dropdown">
+            <img class="avatar dropdown-toggle" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" src="https://kitt.lewagon.com/placeholder/users/ssaunier" />
+            <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="#">Register</a>
+              <a class="dropdown-item" href="#">Log in</a>
+              <a class="dropdown-item" href="#">My Profile</a>
+              <a class="dropdown-item" href="#">Rent out your capybara</a>
+            </div>
+          </li>
+      </ul>
+    </div>
+  </div>
+</div>
 <h1>Rent a capybara for the day!</h1>
-<% @capybaras.each do |capybara| %>
-<ul>
-  <li><%= capybara.name %></li>
-  <li><%= capybara.description %></li>
-  <li><%= capybara.price %></li>
-<% end %>
-</ul>
+<div class="cards-container">
+  <ul class="cards">
+    <% @capybaras.each do |capybara| %>
+      <li>
+        <div class="card-product">
+          <img src="<%= image_path "capy1.jpg"%>">
+            <div class="card-product-infos">                <div>
+              <h2>CAPYNAME</h2>
+              <p>CAPYDESCRIPTION</p>
+            </div>
+              <h2 class="card-product-pricing">CAPYPRICE</h2>
+            </div>
+        </div>
+      </li>
+    <% end %>
+  </ul>
+</div>
+
+<div class="card" style="background-image: url(http://kitt.lewagon.com/placeholder/cities/rio)">
+          Rio
+        </div>
