--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -69,6 +69,7 @@
       </div>
     </li>
   </ul>
+  <!-- JS animations -->
   <script>
     ScrollReveal().reveal('.section-headline');
 		ScrollReveal().reveal('.card-product');
