Created links on the homepage, Finished capybara show page (but the form breaks), Created capybara new page

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,6 +1,9 @@
 // Import page-specific CSS files here.
 @import "home";
 @import "show";
+@import "new";
+
+
 
 // Navbar design
 
@@ -37,5 +40,3 @@ font-family: 'Montserrat'
   padding-top: 32px;
   display: block
 }
-
-
