--- a/app/views/capybaras/new.html.erb
+++ b/app/views/capybaras/new.html.erb
@@ -1,4 +1,4 @@
-<%= render 'components/_navbar' %>
+<%= render 'components/navbar' %>
 <h2 class='headline-index section-headline'>Share your capybara with the world!</h2>
 
 <div class="new-capybara-form">
