--- a/app/views/capybaras/show.html.erb
+++ b/app/views/capybaras/show.html.erb
@@ -3,7 +3,12 @@
 
 <div class=" product-container">
 
-  <img src="<%= image_path "capy1.jpg"%>" class="product-picture">
+
+<%if @capybara.photo.attached? %>
+  <%= cl_image_tag(@capybara.photo.key, class: 'product-picture') %>
+<% else %>
+  <%= image_tag("capy1.jpg", class: 'product-picture' ) %>
+<% end %>
 
   <div class="name">
     <h1>Hello! I'm <%= @capybara.name %></h1>
