cards on homepage added

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,8 +16,8 @@
       <img src="<%= image_path "capy1.jpg"%>" />
       <div class="card-product-infos">
         <div>
-          <h2>Title here</h2>
-          <p>Short description here!</p>
+          <h2>Capper</h2>
+          <p>Always smiling, always happy</p>
         </div>
         <h2 class="card-product-pricing">€29.99</h2>
       </div>
@@ -27,8 +27,8 @@
       <img src="<%= image_path "capy2.jpg"%>" />
       <div class="card-product-infos">
         <div>
-          <h2>Title here</h2>
-          <p>Short description here!</p>
+          <h2>The Cap</h2>
+          <p>A bit stubburn, but lovable anyways</p>
         </div>
         <h2 class="card-product-pricing">€15.99</h2>
       </div>
@@ -38,8 +38,8 @@
       <img src="<%= image_path "capy3.jpg"%>" />
       <div class="card-product-infos">
         <div>
-          <h2>Title here</h2>
-          <p>Short description here!</p>
+          <h2>Tommy and Pam</h2>
+          <p>Rent capybara, get cat for free</p>
         </div>
         <h2 class="card-product-pricing">€50</h2>
       </div>
