navbar raw and capy photos from db

--- a/app/views/components/_navbar.html.erb
+++ b/app/views/components/_navbar.html.erb
@@ -4,6 +4,11 @@
       <%= image_tag "capy-logo.png" %>
     <% end %>
 
+    <div class="links">
+      <%= link_to "Home", root_path%>
+      <%= link_to "Show all capybaras", capybaras_path %>
+    </div>
+
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
