--- a/app/views/capybaras/index.html.erb
+++ b/app/views/capybaras/index.html.erb
@@ -1,5 +1,23 @@
 <%= render 'components/navbar' %>
 <h2 class='headline-index section-headline'>Meet the capybaras:</h2>
+<div class="container">
+  <div class="row justify-content-center mt-2">
+    <div class="col-sm-8">
+
+      <%= form_tag capybaras_path, method: :get do %>
+        <%= text_field_tag :query,
+          params[:query],
+          class: "form-control",
+          placeholder: "Find a capybara"
+        %>
+        <%= submit_tag "Search", class: "btn btn-primary" %>
+      <% end %>
+
+
+      </div>
+    </div>
+  </div>
+</div>
 
 <div class="cards-container">
   <div class="cards">
