--- a/app/views/capybaras/index.html.erb
+++ b/app/views/capybaras/index.html.erb
@@ -5,6 +5,7 @@
   <div class="cards">
 
     <% @capybaras.each do |capybara| %>
+      <%= link_to capybara_path(capybara) do %>
       <div class="card-product">
         <%= cl_image_tag capybara.photo.key %>
         <div class="card-product-infos">
@@ -15,8 +16,8 @@
           <h2 class="card-product-pricing"><%= capybara.price.to_s + "€ /day" %></h2>
         </div>
       </div>
+      <% end %>
     <% end %>
-  </div>
   <div style="width: 100%; height: 600px;"
   data-controller="mapbox"
   data-mapbox-markers-value="<%= @markers.to_json %>"
