--- a/app/views/capybaras/index.html.erb
+++ b/app/views/capybaras/index.html.erb
@@ -35,7 +35,7 @@
       </div>
     <% end %>
   </div>
-  <div style="width: 100%; height: 600px;"
+  <div class="map" style="width: 600px; height: 100vh;"
   data-controller="mapbox"
   data-mapbox-markers-value="<%= @markers.to_json %>"
   data-mapbox-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"></div>
