--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -45,3 +45,15 @@
   flex-wrap: wrap;
   grid-gap: 8px;
 }
+
+.name {
+  h1 {
+    font-family: 'Montserrat';
+    font-weight: lighter;
+  }
+}
+
+.showpage-title {
+  color: white;
+  margin-left: 18px;
+}
