--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -16,7 +16,7 @@
 .links {
   a {
     color: white;
-    font-weight: lighter;
+    // font-weight: lighter;
     font-family: 'Montserrat';
     text-decoration: none;
     margin: 0 8px;
