--- a/app/views/capybaras/show.html.erb
+++ b/app/views/capybaras/show.html.erb
@@ -1,5 +1,5 @@
 <%= render 'components/navbar' %>
-<h2 class='headline-index section-headline'>Meet the capybaras:</h2>
+<h2 class='headline-index section-headline'>Meet the capybaras: <span class="showpage-title">Hello! I'm <%= @capybara.name %></span></h2>
 
 <div class=" product-container">
 
