--- a/app/assets/stylesheets/components/_booking_form.scss
+++ b/app/assets/stylesheets/components/_booking_form.scss
@@ -1,4 +1,21 @@
 .booking-button {
   color: white !important;
-  margin-top: 16px;
+  margin-top: 156px;
+}
+.booking-form {
+  height: 25vw;
+  width: 20vw;
+  text-align: center;
+  border-width: 6px;
+  border-color: black;
+  box-shadow: 2px;
+  padding: 18px;
+  background-color: #ff9f45;
+
+}
+.form-label {
+  font-family: Montserrat;
+  font-size: 30px;
+  color: white;
+  margin-bottom: 32px;
 }
