--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,7 +10,7 @@
 
   <h2 class='section-headline'>Cutest capybaras from your area:</h2>
 
-  <div class="cards">
+  <div class="cards-home">
 
     <% @capybaras.each do |capybara| %>
       <div class="card-product">
