--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -54,6 +54,14 @@ body {
   background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4));
 }
 
-.cards-home {
-  margin-top: 24px;
+// .cards-home {
+//   margin-top: 24px;
+// }
+
+.cards-container-homepage h2 {
+  margin-bottom: 20px;
 }
+
+// .cards img {
+//   margin-top: 24px;
+// }
