--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,7 +6,7 @@
     <a class="btn btn-success btn-lg" href="<%=capybaras_path%>">Meet your new fluffy friend!</a>
   </div>
 </div>
-<div class="cards-conatiner">
+<div class="cards-container-homepage">
 
   <h2 class='section-headline'>Cutest capybaras from your area:</h2>
 
