--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -61,11 +61,11 @@
   justify-content: space-evenly;
   align-items: center;
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 32px;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 20px;
   flex-wrap: wrap;
   flex-grow: 1;
-  margin: 0 32px;
+  margin: 0 20px;
 }
 
 .card-product-image {
@@ -88,4 +88,3 @@
   color: white;
   margin-left: 18px;
 }
-
