--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -58,9 +58,9 @@ body {
 //   margin-top: 24px;
 // }
 
-.cards-container-homepage h2 {
-  margin-bottom: 20px;
-}
+// .cards-container-homepage h2 {
+//  margin-bottom: 20px;
+// }
 
 // .cards img {
 //   margin-top: 24px;
